...
  }

  return (
    <View className="flex-1 flex-col gap-6 p-4">
      <View className="flex flex-row items-center justify-between">
        <Text
          testID="group-dashboard-title"
          className="text-foreground text-3xl font-bold"
        >
          Your Groups
        </Text>

        <Button
...
