...
            name="name"
            render={({ field }) => (
              <>
                <FormControl>
                  <Input
                    {...field}
                    testID="shopping-list-item-edit-input"
                    onChangeText={field.onChange}
                    maxLength={
                      editShoppingListItemFormSchema.shape.name.maxLength ??
                      undefined
                    }
                  />
...
              title="Cancel"
              variant="secondary"
              onPress={() => router.back()}
              className="flex-1"
            />
            <Button
              testID="shopping-list-item-edit-save"
              title={form.formState.isSubmitting ? "Updating..." : "Update"}
              className="flex-1"
              disabled={form.formState.isSubmitting}
              icon={form.formState.isSubmitting ? "loader" : undefined}
              onPress={form.handleSubmit(handleUpdateShoppingListItem)}
            />
...
