...
>(({ field }, ref) => {
  return (
    <FormItem className="relative flex-1">
      <FormControl>
        <Input
          {...field}
          data-testid="shopping-list-item-input"
          placeholder="add new item"
          maxLength={shoppingListItemNameSchema.maxLength ?? undefined}
          ref={ref}
        />
      </FormControl>
      <FormMessage />
...
