...
            "hover:text-foreground flex flex-col items-center gap-1",
            isGroupActive ? "text-foreground" : "text-muted-foreground",
          )}
          prefetch={false}
        >
          <HomeIcon className="h-6 w-6" />
          <span className="text-xs">Home</span>
        </Link>
        <Link
          href={hasCurrentGroup ? "/shopping-list" : "/group"}
          className={cn(
            "hover:text-foreground flex flex-col items-center gap-1",
            isShoppingActive ? "text-foreground" : "text-muted-foreground",
...
            "hover:text-foreground flex flex-col items-center gap-1",
            isChatActive ? "text-foreground" : "text-muted-foreground",
          )}
          prefetch={false}
        >
          <MessageSquareIcon className="h-6 w-6" />
          <span className="text-xs">Chat</span>
        </Link>
      </nav>
    </div>
  );
}

