...
const ManageGroups = () => {
  return (
    <>
      <Stack.Screen
        options={{
          title: "Manage Groups",
          headerBackTitle: "Settings",
        }}
      />
      <GroupsDashboard />
    </>
  );
};
...
